init category & product api
update api doc in swagger
