# database/models/Product.js
@@ -1,31 +1,46 @@
 const mongoose = require("mongoose");
 const { Schema } = mongoose;
 
-const ProductSchema = new Schema({
-  name: {
-    type: String,
-    required: [true, "name is required"],
+const ProductSchema = new Schema(
+  {
+    sku: {
+      type: String,
+      required: [true, "sku is required"],
+      unique: true,
+    },
+    name: {
+      type: String,
+      required: [true, "name is required"],
+    },
+    price: {
+      type: String,
+      required: [true, "price is required"],
+    },
+    quantity: {
+      type: Number,
+      required: [true, "quantity is required"],
+      default: 1,
+    },
+    description: {
+      type: String,
+      required: [true, "description is required"],
+    },
+    image: {
+      type: String,
+    },
+    category: {
+      type: String,
+      required: [true, "category is required"],
+    },
   },
-  price: {
-    type: String,
-    required: [true, "price is required"],
-  },
-  amount: {
-    type: Number,
-    required: [true, "amount is required"],
-    default: 1,
-  },
-  categories: {
-    type: [String],
-    required: [true, "categories is required"],
-  },
-  description: {
-    type: String,
-    required: [true, "description is required"],
-  },
-  image: {
-    type: String,
-    required: [true, "image is required"],
-  },
+  { id: false, toJSON: { virtuals: true }, timestamps: true }
+);
+
+ProductSchema.virtual("category_detail", {
+  ref: "Category",
+  localField: "category",
+  foreignField: "name",
+  justOne: true,
 });
+
 module.exports = mongoose.model("Product", ProductSchema, "products");
